--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
-<link rel="manifest" href="../images/site.webmanifest">
-<link rel="mask-icon" href="../images/safari-pinned-tab.svg" color="#001aff">
+<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+<link rel="manifest" href="./images/site.webmanifest">
+<link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#001aff">
 <meta name="apple-mobile-web-app-title" content="Tovi">
 <meta name="application-name" content="Tovi">
 <meta name="msapplication-TileColor" content="#001aff">
