--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </a>
       <nav>
          <a href="https://twowei.github.io/learnFE/index.html">博客</a>
-         <a href="https://twowei.github.io/learnFE/portfolio.html" class="current">作品集</a>
-         <!-- <a href="../sideprojects.html">小项目</a> -->
+         <a href="https://twowei.github.io/learnFE/portfolio.html">作品集</a>
+         <a href="https://twowei.github.io/learnFE/sideprojects.html" class="current">小项目</a>
          <a href="https://twowei.github.io/learnFE/about.html">关于</a>
       </nav>
    </header>
@@ -47,13 +47,7 @@
 
 		<!-- End Post -->
 
-      <ul class="workGrid list-unstyled row">
-         <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-            <a href="https://1up.fireside.fm/" target="_blank">
-            <img src="./images/podcast-1up.jpg"><br>
-            <p>1UP</p>
-         </a>
-         </li>         
+      <ul class="workGrid list-unstyled row">        
          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
             <a href="https://anyway.fm/" target="_blank">
             <img src="./images/podcast-anywayfm.jpg"><br>
@@ -86,12 +80,6 @@
          </a>
          </li>
          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-            <a href="https://jinjinledao.org/" target="_blank">
-            <img src="./images/podcast-jinjinledao.jpg"><br>
-            <p>津津乐道</p>
-         </a>
-         </li>
-         <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
             <a href="https://www.ximalaya.com/toutiao/12608947/" target="_blank">
             <img src="./images/podcast-kanlixiang.jpg"><br>
             <p>看理想</p>
@@ -109,11 +97,7 @@
             <p>内核恐慌</p>
          </a>
          </li>
-         <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-            <a href="http://techreview.social/" target="_blank">
-            <img src="./images/podcast-shehuifen.jpg"><br>
-            <p>社会人科技评论</p>
-         </a>
+
          <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
                <a href="http://gdn.design/" target="_blank">
                <img src="./images/podcast-shejiyaodian.jpg"><br>
@@ -181,12 +165,7 @@
                <p>一知半解</p>
             </a>
             </li>
-            <li class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
-               <a href="https://thetype.com/typechat/" target="_blank">
-               <img src="./images/podcast-zitanzichang.jpg"><br>
-               <p>字谈字唱</p>
-            </a>
-            </li>
+
 
 
 
@@ -209,6 +188,11 @@
           </a>
     
           <nav>
+            <a href="https://www.figma.com/@tovi" target="_blank">
+               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="tv_icon">
+                 <path fill-rule="evenodd" clip-rule="evenodd" d="M8.57152 0.7146C6.12574 0.7146 4.14304 2.6973 4.14304 5.14308C4.14304 6.52519 4.77619 7.75943 5.76826 8.57155C4.77619 9.38368 4.14304 10.6179 4.14304 12C4.14304 13.3821 4.77619 14.6164 5.76826 15.4285C4.77619 16.2406 4.14304 17.4748 4.14304 18.857C4.14304 21.3027 6.12574 23.2854 8.57152 23.2854C11.0173 23.2854 13 21.3027 13 18.857V16.4285V15.7038C13.6973 16.162 14.5318 16.4285 15.4285 16.4285C17.8743 16.4285 19.857 14.4458 19.857 12C19.857 10.6179 19.2238 9.38368 18.2317 8.57155C19.2238 7.75943 19.857 6.5252 19.857 5.14308C19.857 2.6973 17.8743 0.7146 15.4285 0.7146H13H11H8.57152ZM15.4154 9.57157H15.4285C15.432 9.57157 15.4355 9.57156 15.439 9.57156C16.7754 9.57721 17.857 10.6623 17.857 12C17.857 13.3412 16.7697 14.4285 15.4285 14.4285C14.0873 14.4285 13 13.3412 13 12C13 10.6632 14.0802 9.57859 15.4154 9.57157ZM15.4391 7.57155C16.7754 7.56586 17.857 6.48078 17.857 5.14308C17.857 3.80187 16.7697 2.7146 15.4285 2.7146H13V7.57157H15.4107C15.4167 7.57154 15.4226 7.57153 15.4285 7.57153C15.432 7.57153 15.4355 7.57154 15.4391 7.57155ZM11 7.57153V2.7146H8.57152C7.23031 2.7146 6.14304 3.80187 6.14304 5.14308C6.14304 6.48078 7.2246 7.56586 8.56096 7.57155L8.57152 7.57153H11ZM8.56103 9.57156L8.57152 9.57157H11V14.4285H8.57152L8.56103 14.4285C7.22464 14.4228 6.14304 13.3377 6.14304 12C6.14304 10.6623 7.22464 9.57721 8.56103 9.57156ZM8.57152 16.4285L8.56103 16.4285C7.22464 16.4341 6.14304 17.5192 6.14304 18.857C6.14304 20.1982 7.23031 21.2854 8.57152 21.2854C9.91273 21.2854 11 20.1982 11 18.857V16.4285H8.57152Z"/>
+               </svg>                               
+             </a>
             <a href="https://twitter.com/twooowei" target="blank"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="tv_icon"><path d="M22.1621 5.65599C21.3986 5.99368 20.589 6.21546 19.7601 6.31399C20.6338 5.79142 21.2878 4.969 21.6001 3.99999C20.7801 4.48799 19.8811 4.82999 18.9441 5.01499C18.3147 4.34157 17.4804 3.89495 16.571 3.74457C15.6616 3.59419 14.728 3.74848 13.9153 4.18344C13.1026 4.6184 12.4564 5.30967 12.0772 6.14978C11.6979 6.98989 11.6068 7.93177 11.8181 8.82899C10.1552 8.74564 8.52838 8.31351 7.04334 7.56065C5.55829 6.80779 4.24818 5.75104 3.19805 4.45899C2.82634 5.09744 2.63101 5.82321 2.63205 6.56199C2.63205 8.01199 3.37005 9.29299 4.49205 10.043C3.82806 10.0221 3.17869 9.84277 2.59805 9.51999V9.57199C2.59825 10.5377 2.93242 11.4736 3.5439 12.221C4.15538 12.9685 5.00653 13.4815 5.95305 13.673C5.33667 13.84 4.69036 13.8646 4.06305 13.745C4.32992 14.5762 4.85006 15.3032 5.55064 15.8241C6.25123 16.345 7.09718 16.6338 7.97005 16.65C7.10253 17.3313 6.10923 17.835 5.04693 18.1322C3.98464 18.4293 2.87418 18.5142 1.77905 18.382C3.69075 19.6114 5.91615 20.2641 8.18905 20.262C15.8821 20.262 20.0891 13.889 20.0891 8.36199C20.0891 8.18199 20.0841 7.99999 20.0761 7.82199C20.8949 7.23016 21.6017 6.49701 22.1631 5.65699L22.1621 5.65599Z"/></svg></a>
             <a href="https://github.com/twowei/learnFE" target="blank">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="tv_icon">
