--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="row">
       <div class="col-md-12 top">
          <h1 class="mainheading">Podcasts I listen to</h1>
-         <div class="data">我订阅的，和我比较常听的播客。可以在 <a href="app_icon_pack.zip">我的 Notion</a> 看更完整的列表。</div>
+         <div class="data">我订阅的，和我比较常听的播客。可以在 <a href="https://note.tovi.fun/Podcasts-541e3727a87f4abb85459a48e87ac655">我的 Notion</a> 看更完整的列表。</div>
       </div>
    </div>
 
